--- a/β1/β1.md
+++ b/β1/β1.md
@@ -1,24 +1,22 @@
 - 过去两天完成了哪些任务： 
-  - 进行知识抽取
+  - 知识抽取
   
 - github签入记录
 
 ![image-20211118182104061](alpha6.assets/image-20211118182104061.png)
 
 - 接下来计划： 
-  - 进行知识抽取
+  - 知识推理和部署
 - 还剩下哪些任务： 
-  - 知识抽取
-  - 部署上线
-  - 知识融合
+  - 知识推理和部署
 - 燃尽图
 
-![image-20211118180433055](alpha6.assets/image-20211118180433055.png)
+![image-20211122191536503](%CE%B21.assets/image-20211122191536503.png)
 
 - 遇到了哪些困难： 
-  - 知识抽取速度慢
+  - 数据量太大
 - 有哪些收获和疑问： 
-  - 进行知识抽取
+  - 知道自己电脑的极限在哪里
 - PSP表格
 
 |                PSP2.1                 |   Personal Software Process Stages    | 预估耗时（分钟） | 实际耗时（分钟） |
@@ -42,11 +40,6 @@
 
 - 学习进度表
 
-| 第N轮次 | 新增代码（行） | 累计代码（行） | 本周学习耗时(小时) | 累计学习耗时(小时) |       重要成长        |
-| :-----: | :------------: | :------------: | :----------------: | :----------------: | :-------------------: |
-| 1(beta) |      100       |      100       |         10         |         10         | 学习了知识的表示形式  |
-| 2(beta) |       0        |      100       |         10         |         10         |  学习了知识本体建模   |
-| 3(beta) |       0        |      100       |         10         |         10         |   实践知识本体建模    |
-| 4(beta) |      215       |      315       |         10         |         10         |  MYSQL转化RDF三元组   |
-| 5(beta) |       0        |      315       |         10         |         10         | RDF三元组转化为nt格式 |
-| 6(beta) |       0        |      315       |         10         |         10         |     进行知识抽取      |
+| 第N轮次 | 新增代码（行） | 累计代码（行） | 本周学习耗时(小时) | 累计学习耗时(小时) | 重要成长 |
+| :-----: | :------------: | :------------: | :----------------: | :----------------: | :------: |
+| 1(beta) |      200       |      200       |         3          |         3          | 知识抽取 |
