--- a/β2/β2.md
+++ b/β2/β2.md
@@ -1,22 +1,22 @@
 - 过去两天完成了哪些任务： 
-  - 知识抽取
+  - 知识推理、接口编写、部署
   
 - github签入记录
 
 ![image-20211122191944161](%CE%B21.assets/image-20211122191944161.png)
 
 - 接下来计划： 
-  - 知识推理和部署
+  - 优化
 - 还剩下哪些任务： 
-  - 知识推理和部署
+  - 优化
 - 燃尽图
 
-![image-20211122191536503](%CE%B21.assets/image-20211122191536503.png)
+![image-20211123194841696](%CE%B22.assets/image-20211123194841696.png)
 
 - 遇到了哪些困难： 
-  - 数据量太大
+  - 数据量太大，推理不了
 - 有哪些收获和疑问： 
-  - 知道自己电脑的极限在哪里
+  - neo4j真好玩
 - PSP表格
 
 |                PSP2.1                 |   Personal Software Process Stages    | 预估耗时（分钟） | 实际耗时（分钟） |
@@ -43,3 +43,4 @@
 | 第N轮次 | 新增代码（行） | 累计代码（行） | 本周学习耗时(小时) | 累计学习耗时(小时) | 重要成长 |
 | :-----: | :------------: | :------------: | :----------------: | :----------------: | :------: |
 | 1(beta) |      200       |      200       |         3          |         3          | 知识抽取 |
+| 2(beta) |      500       |      700       |         6          |         6          | 做完软工 |
