--- a/β3/β2.md
+++ b/β3/β2.md
@@ -1,5 +1,5 @@
 - 过去两天完成了哪些任务： 
-  - 知识推理、接口编写、部署
+  - 优化
   
 - github签入记录
 
@@ -11,7 +11,7 @@
   - 优化
 - 燃尽图
 
-![image-20211123194841696](%CE%B22.assets/image-20211123194841696.png)
+![image-20211124193941730](%CE%B22.assets/image-20211124193941730.png)
 
 - 遇到了哪些困难： 
   - 数据量太大，推理不了
@@ -44,3 +44,5 @@
 | :-----: | :------------: | :------------: | :----------------: | :----------------: | :------: |
 | 1(beta) |      200       |      200       |         3          |         3          | 知识抽取 |
 | 2(beta) |      500       |      700       |         6          |         6          | 做完软工 |
+| 3(beta) |       0        |      700       |         6          |         6          | 做完软工 |
+
