--- a/β4/β2.md
+++ b/β4/β2.md
@@ -11,7 +11,7 @@
   - 优化
 - 燃尽图
 
-![image-20211124193941730](%CE%B22.assets/image-20211124193941730.png)
+![image-20211125195411961](%CE%B22.assets/image-20211125195411961.png)
 
 - 遇到了哪些困难： 
   - 数据量太大，推理不了
@@ -45,4 +45,5 @@
 | 1(beta) |      200       |      200       |         3          |         3          | 知识抽取 |
 | 2(beta) |      500       |      700       |         6          |         6          | 做完软工 |
 | 3(beta) |       0        |      700       |         6          |         6          | 做完软工 |
+| 4(beta) |       0        |      700       |         6          |         6          | 做完软工 |
 
