--- a/β5/β2.md
+++ b/β5/β2.md
@@ -11,7 +11,7 @@
   - 优化
 - 燃尽图
 
-![image-20211125195411961](%CE%B22.assets/image-20211125195411961.png)
+![image-20211126202024739](%CE%B22.assets/image-20211126202024739.png)
 
 - 遇到了哪些困难： 
   - 数据量太大，推理不了
@@ -46,4 +46,5 @@
 | 2(beta) |      500       |      700       |         6          |         6          | 做完软工 |
 | 3(beta) |       0        |      700       |         6          |         6          | 做完软工 |
 | 4(beta) |       0        |      700       |         6          |         6          | 做完软工 |
+| 5(beta) |       0        |      700       |         6          |         6          | 做完软工 |
 
